withdraw-result: fix error alignment

--- a/packages/pilot/src/containers/Withdraw/Result/style.css
+++ b/packages/pilot/src/containers/Withdraw/Result/style.css
@@ -18,7 +18,7 @@
 }
 
 .errorCol {
-  justify-content: center;
+  align-items: center;
 }
 
 .containerError {
